--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -60,11 +60,10 @@
                   <% properties.each do |property| %>
                   <% property_name = property.name %>
                   <% property_pretty_name = property.label %>
-                  <% sortable_field = (property.sortable?.is_a?(String) ? property.sortable? : property_name).to_s %>
-                  <% selected = sort == sortable_field %>
+                  <% selected = sort == property_name.to_s %>
                   <th class="<%= "#{property.css_class}" %> <%= selected ? "selected" : nil %>">
                     <% if property.sortable? %>
-                    <% sort_location = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param, :sort => sortable_field).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {})) %>
+                    <% sort_location = rails_admin_list_path(params.merge(:model_name => @abstract_model.to_param, :sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(selected && sort_reverse != "true" ? {:sort_reverse => "true"} : {})) %>
                     <% sort_direction = selected ? (sort_reverse ? "ascending" : "descending") : nil %>
                     <%= link_to(property_pretty_name.upcase, sort_location, :class => sort_direction, :remote => true) %>
                     <% else %>
